[package]
name = "my_proxy_server"
version = "0.1.0"
edition = "2024"
#[lib]
#crate-type = ["cdylib"]

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
wreq = { version = "5", features = ["json"], default-features = false }
wreq-util = "2"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde_json = "1"
clap = "4.5.45"
